<?xml version="1.0"?>
<package format="2">
  <name>neostate</name>
  <version>0.0.0</version>
  <description>
    NeoPixel based ROS state indicator.
  </description>

  <maintainer email="christian.lanegger@mavt.ethz.ch">Christian Lanegger</maintainer>

  <license>TBD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
</package>
