<?xml version="1.0"?>
<package format="2">
  <name>neostate</name>
  <version>0.0.0</version>
  <description>
    NeoPixel based ROS state indicator.
  </description>

  <maintainer email="christian.lanegger@mavt.ethz.ch">Christian Lanegger</maintainer>

  <license>TBD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>rosserial_python</depend>
  <depend>rosserial_arduino</depend>
  <depend>rosserial_client</depend>
  <depend>Adafruit_NeoPixel</depend>
  
</package>
